--- a/css/talento.css
+++ b/css/talento.css
@@ -36,6 +36,7 @@ header{
 	-webkit-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
 	-moz-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
 	box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
+  z-index: 500;
 }
 
 header ul {
@@ -60,7 +61,7 @@ header ul li {
 }
 
 header ul li:hover {
-  border-bottom: 2px solid gray;
+  text-decoration: underline;
 }
 
 header ul li:hover ul {
@@ -103,6 +104,7 @@ header ul li ul li:hover{
 /*──────────────────────*/
 
 .contenedor {
+  margin-top: 60px;
   flex: 1;
 }
 
@@ -198,18 +200,263 @@ footer ul li:hover {
 
 .seccion_carrusel{
   width: 100%;
-  height: 1500px;
-  background-color: #b3d4fc;
+  background-color: #FFF;
+  overflow: hidden;
 }
 
 .seccion_imagenes{
   width: 100%;
-  height: 400px;
-  background-color: #04b822;
 }
 
 
+/*──────────────────────*/
+/*    GENERALES         */
+/*──────────────────────*/
+.m-general{
+  padding: 0 6%;
+}
 
+.fila {
+  vertical-align: middle;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  padding: 2px 10px;
+}
+
+.cont-elems {
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: flex-start
+}
+
+.elem {
+  text-align: center;
+  width: 100%;
+}
+
+.elem-4 {
+  display: flex;
+  width: 25%;
+  align-items: center;
+  justify-content: center;
+  padding: 10px 0px;
+}
+
+.cont-c{
+  position: absolute;
+    top: 0;
+    color: white;
+    z-index: 1;
+    width: 40%;
+    padding: 6%;
+    text-align: initial;
+    Transform: translate(0%, 25%);
+}
+
+.tit-c{
+  font-size: 4em;
+  font-weight: bold;
+}
+
+.det-c {
+  display: -webkit-inline-box;
+  font-size: 1.1em;
+  text-transform: uppercase;
+  margin-bottom: 30px;
+  font-weight: 700;
+}
+
+.det-c div{
+  margin-left: 15px;
+}
+
+.red-c {
+  font-size: 2.1em;
+}
+
+.btn-c {
+  background-color: black;
+  color: aliceblue;
+  border: 2px solid yellow;
+  font-size: 14px;
+  padding: 6px;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+/*──────────────────────*/
+/*    GENERALES         */
+/*──────────────────────*/
+
+.tarjeta{
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 1px solid rgba(0,0,0,.125);
+  border-radius: .25rem;
+  width: 200px;
+  height: 220px;
+}
+
+/* ==========================================================================
+   COLORS
+   ========================================================================== */
+
+
+.bkg-blanco{
+  background-color: #fff !important;
+}
+
+.bkg-negro{
+  background-color: #000 !important;
+}
+
+.bkg-r {
+    background-color: #E84B5B !important;
+}
+
+.bkg-red {
+    background-color: #D62739 !important;
+}
+
+.red {
+    color: #D62739 !important;
+}
+
+.bkg-o {
+    background-color: #FC6E51 !important;
+}
+
+.bkg-orange {
+    background-color: #DB391E !important;
+}
+
+.bkg-am {
+    background-color: #FFDA7C !important;
+}
+
+.bkg-amarillo {
+    background-color: #FFC136 !important;
+}
+
+.bkg-v {
+    background-color: #48CFAD !important;
+}
+
+.bkg-verde {
+    background-color: #19A784 !important;
+}
+
+.bkg-az {
+    background-color: #4FC1E9 !important;
+}
+
+.bkg-azul {
+    background-color: #0B9BD0 !important;
+}
+
+.bkg-m {
+    background-color: #8E7CD1 !important;
+}
+
+.bkg-morado {
+    background-color: #805ce0 !important;
+}
+
+.bkg-gris{
+    background-color: #848484 !important;
+}
+
+.color-o {
+    background-color: #FC6E51 !important;
+}
+
+.color-orange {
+    background-color: #DB391E !important;
+}
+
+.color-amarillo {
+    background-color: #FFDA7C !important;
+}
+
+.color-anaranjado {
+    background-color: #FFC136 !important;
+}
+
+.color-verde {
+    background-color: #48CFAD !important;
+}
+
+.color-verde {
+    background-color: #19A784 !important;
+}
+
+.color-azul {
+    background-color: #4FC1E9 !important;
+}
+
+.color-azul {
+    background-color: #0B9BD0 !important;
+}
+
+.color-m {
+    background-color: #8E7CD1 !important;
+}
+
+.color-morado {
+    background-color: #805ce0 !important;
+}
+
+.color-gris{
+    background-color: #848484 !important;
+}
+
+
+.mt-10{
+  margin-top: 10px;
+}
+
+.mt-20{
+  margin-top: 20px;
+}
+
+.mt-30{
+  margin-top: 30px;
+}
+
+.mt-40{
+  margin-top: 40px;
+}
+
+.mt-50{
+  margin-top: 50px;
+}
+
+.mt-60{
+  margin-top: 60px;
+}
+
+.mt-70{
+  margin-top: 70px;
+}
+
+.mt-80{
+  margin-top: 80px;
+}
+
+.mt-90{
+  margin-top: 90px;
+}
+
+.mt-100{
+  margin-top: 100px;
+}
 /* ==========================================================================
    BASE
    ========================================================================== */
