--- a/css/talento.css
+++ b/css/talento.css
@@ -99,6 +99,7 @@ header ul li ul li:hover{
 }
 
 
+
 /*──────────────────────*/
 /*    CONTENEDOR        */
 /*──────────────────────*/
@@ -245,6 +246,15 @@ footer ul li:hover {
   padding: 10px 0px;
 }
 
+.elem-c-img{
+  display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: flex-end;
+    align-items: flex-end;
+    padding: 0 6%;
+}
+
 .cont-c{
   position: absolute;
     top: 0;
@@ -286,11 +296,25 @@ footer ul li:hover {
   text-transform: uppercase;
   cursor: pointer;
 }
+
+.back-talento{
+  position: absolute;
+  background-color: rgb(0 0 0 / 70%);
+  height: inherit;
+  color: #FFF;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
+  width: inherit;
+}
 /*──────────────────────*/
 /*    GENERALES         */
 /*──────────────────────*/
 
-.tarjeta{
+.img-talento{
   position: relative;
   display: flex;
   flex-direction: column;
@@ -302,6 +326,61 @@ footer ul li:hover {
   border-radius: .25rem;
   width: 200px;
   height: 220px;
+  box-shadow: 2px 3px 2px 0px #cacaca;
+  cursor: pointer;
+  overflow: hidden;
+  
+}
+
+.img-talento img{
+  width: 200px;
+  height: 220px;
+}
+
+.tit-sec{
+  background-color: #9e9e9e;
+  text-transform: uppercase;
+  padding: 0 6%;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-weight: bold;
+}
+
+.txt-tal-tit{
+  display: block;
+  font-size: 1.17em;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+}
+
+.txt-tal-qes{ 
+  display: block;
+  font-size: 0.83em;
+  margin-block-end: 1.67em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+}
+
+.back-bottom{
+  text-transform: uppercase;
+  text-decoration: underline;
+  font-size: 13px;
+  margin-top: 15px;
+}
+
+.back-redes{
+  display: inline-block;
+  font-size: 25px;
+}
+
+.back-redes div{
+  font-size: 14px;
+  text-transform: uppercase;
+  font-family: 'Open Sans';
 }
 
 /* ==========================================================================
