--- a/css/talento.css
+++ b/css/talento.css
@@ -12,6 +12,7 @@ body{
   display: flex;
   min-height: 100vh;
   flex-direction: column;
+  animation: all ease-in-out;
 }
 
 
@@ -29,7 +30,7 @@ header{
   align-items: center;
   flex-direction: row;
   justify-content: space-between;
-  padding: 0 6%;
+  padding: 0 10%;
   border-bottom: 1px solid #a2a2a2;
   background: rgb(252,212,27);
   background: linear-gradient(139deg, rgba(252,212,27,1) 0%, rgba(243,217,43,1) 49%, rgba(242,243,43,1) 100%);
@@ -99,17 +100,6 @@ header ul li ul li:hover{
 }
 
 
-
-/*──────────────────────*/
-/*    CONTENEDOR        */
-/*──────────────────────*/
-
-.contenedor {
-  margin-top: 60px;
-  flex: 1;
-}
-
-
 /*──────────────────────*/
 /*    FOOTER            */
 /*──────────────────────*/
@@ -159,7 +149,7 @@ footer ul li:hover {
 .foot-main {
   padding: 1.25rem 1.875rem;
   display: flex;
-  flex-wrap: wrap;
+  width: 80%;
 }
 
 @media only screen and (min-width: 29.8125rem /* 477px */) {
@@ -175,7 +165,6 @@ footer ul li:hover {
 
 .foot-main-item {
   padding: 1.25rem;
-  min-width: 12.5rem;
 }
 
 .foot-title {
@@ -188,10 +177,19 @@ footer ul li:hover {
 
 .legales{
   width: -webkit-fill-available;
-  padding: 0.5em 6%;
+  padding: 0.5em 10%;
   color: #e0e0e0;
   background-color: #333;
   font-size: 12px;
+}
+
+/*──────────────────────*/
+/*    CONTENEDOR        */
+/*──────────────────────*/
+
+.contenedor {
+  margin-top: 60px;
+  flex: 1;
 }
 
 
@@ -214,7 +212,7 @@ footer ul li:hover {
 /*    GENERALES         */
 /*──────────────────────*/
 .m-general{
-  padding: 0 6%;
+  padding: 0 10%;
 }
 
 .fila {
@@ -222,7 +220,11 @@ footer ul li:hover {
   display: flex;
   justify-content: center;
   flex-direction: row;
-  padding: 2px 10px;
+  padding: 0 6%;
+}
+
+.maxww{
+  max-height: 500px;
 }
 
 .cont-elems {
@@ -252,7 +254,12 @@ footer ul li:hover {
     flex-wrap: nowrap;
     justify-content: flex-end;
     align-items: flex-end;
+    width: 70%;
     padding: 0 6%;
+}
+
+.elem-c-img img {
+  width: 27vw;
 }
 
 .cont-c{
@@ -261,13 +268,13 @@ footer ul li:hover {
     color: white;
     z-index: 1;
     width: 40%;
-    padding: 6%;
+    padding: 5% 0 4% 5%;
     text-align: initial;
     Transform: translate(0%, 25%);
 }
 
 .tit-c{
-  font-size: 4em;
+  font-size: 4.5vw;
   font-weight: bold;
 }
 
@@ -309,6 +316,7 @@ footer ul li:hover {
   align-items: center;
   justify-content: center;
   width: inherit;
+  animation: all ease-in-out;
 }
 /*──────────────────────*/
 /*    GENERALES         */
@@ -340,7 +348,7 @@ footer ul li:hover {
 .tit-sec{
   background-color: #9e9e9e;
   text-transform: uppercase;
-  padding: 0 6%;
+  padding: 0 10%;
   margin-top: 20px;
   margin-bottom: 20px;
   font-weight: bold;
@@ -381,6 +389,15 @@ footer ul li:hover {
   font-size: 14px;
   text-transform: uppercase;
   font-family: 'Open Sans';
+}
+
+
+.back-info{
+  transform: translateY(300px);
+}
+
+.img-talento:hover .back-talento{
+  animation: showinfo 0.3s ease-in forwards;
 }
 
 /* ==========================================================================
@@ -536,6 +553,20 @@ footer ul li:hover {
 .mt-100{
   margin-top: 100px;
 }
+
+/* ==========================================================================
+   ANIMACIONES
+   ========================================================================== */
+
+  @keyframes showinfo {
+    from {
+        transform: translateY(300px);
+    }
+    to {
+        transform: translateY(0px);
+    }
+}
+
 /* ==========================================================================
    BASE
    ========================================================================== */
